# parallel-leg

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  STM32H723XG_FLASH.ld
board/: .mxproject  CMakeLists.txt  STM32H723XG_FLASH.ld  board.ioc
board/AZURE_RTOS/App/: app_azure_rtos_config.h
board/Core/Inc/: RTE_Components.h  main.h  stm32h7xx_it.h
board/Core/Src/: adc.c  app_threadx.c  dma.c  fdcan.c  gpio.c  main.c  spi.c  stm32h7xx_it.c  tim.c  usart.c  usb_otg.c
board/USBX/App/: app_usbx_device.c  app_usbx_device.h  ux_device_cdc_acm.c  ux_device_descriptors.h  ux_user.h
board/cmake/stm32cubemx/: CMakeLists.txt
configs/: README.md  params.json  robot.json
configs/cmake/: generate_config.cmake  import_ioc.cmake
demo/: app.cpp
demo/common/: demo_debug.cpp  demo_debug.hpp  demo_protocol.hpp
demo/imu/: imu_demo.cpp  imu_demo.hpp
demo/motor/: motor_demo.cpp  motor_demo.hpp
demo/referee_ui/: referee_ui_demo.cpp  referee_ui_demo.hpp
demo/remoter/: remoter_demo.cpp  remoter_demo.hpp
demo/tools/: demo_packet.py  run_usart_demo.py  run_usb_demo.py
demo/usart/: README.md  usart_demo.cpp  usart_demo.hpp
demo/usb/: README.md  usb_demo.cpp  usb_demo.hpp
